# nlp-fm-agentic-project

./: .env.example  .gitignore  README.md  pyproject.toml  test_connection.py
configs/: experiments.yaml  gridworld_final.yaml  gridworld_pilot.yaml  gridworld_smoke.yaml  logic_final.yaml  logic_final_anchor.yaml  logic_final_main.yaml  logic_pilot.yaml  pilot.yaml
configs/legacy/: full_sweep_logic.yaml
docs/: draft.md  task_description.html  task_description.md
figures/: summary.json
notebooks/: analysis.ipynb
reports/: Kovacs_Benedek_report.md  Kristof_Nemeth_report.md
results/: gridworld_final.jsonl  k0_pilot.jsonl  logic_final.jsonl  logic_pilot.jsonl
scripts/: analyze_pilot.py  analyze_results.py  build_report.sh  build_report_pdf.py  export_report_figures.py  k0_pilot.py  render_report.mjs  run_all.py  run_experiment.py  test_logic_pipeline.py  test_memory.py
src/: config.py  llm.py  metrics.py  runner.py  state.py
src/analysis/: __init__.py  aggregate.py  experiment_design.md  failure_modes.py  loader.py  plots.py
src/architectures/: __init__.py  base.py  level1_baseline.py  level2a_planner_executor.py  level2b_solver_critic.py  level3_adaptive.py  memory.py
src/domains/: __init__.py  base.py
src/domains/gridworld/: domain.py  engine.py  tools.py
src/domains/logic_puzzles/: domain.py  engine.py
src/preprocessing/: gridworld.py
