[tool.poetry]
name = "nlp-fm-agentic-project"
version = "0.1.0"
description = "Comparing agent architectures for the ELTE NLP course"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langgraph = ">=0.4"
langchain-core = "^0.3"
langchain-openai = "^0.3"
python-dotenv = "^1.0.1"
pydantic = "^2.0"
pyyaml = "^6.0"
pandas = "^2.2"
matplotlib = "^3.8"
seaborn = "^0.13"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"